@@ -21,6 +21,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha5...master[Check the HEAD d
 *Topbeat*
 
 *Filebeat*
+- Set close_inactive default to 5 minutes (was 1 hour before)
 
 *Winlogbeat*
 
@@ -136,7 +137,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha4...v5.0.0-alpha5[View comm
 
 - Introduce `close_removed` and `close_renamed` harvester options. {issue}1600[1600]
 - Introduce `close_eof` harvester option. {issue}1600[1600]
-- Add `clean_removed` config option. {issue}1600[1600]
+- Add `clean_removed` and `clean_inactive` config option. {issue}1600[1600]
 
 ==== Deprecated
 
